--- a/src/auth/SignIn/Signin.css
+++ b/src/auth/SignIn/Signin.css
@@ -27,6 +27,8 @@ section main article {
 
 section main article .auth {
     text-align: center;
+    width: 100%;
+    max-width: 400px;
 }
 
 section main article .auth h1 {
@@ -40,6 +42,7 @@ section main article .auth form label {
     display: flex;
     align-items: center;
     gap: 5px;
+    border: 2px solid transparent;
 }
 
 section main article .auth form label span {
@@ -62,6 +65,10 @@ section main article .auth form label input {
     border: none;
     outline: none;
     background: transparent;
+}
+
+section main article .auth form label:focus-within {
+    border: 2px solid black;
 }
 
 section main article .auth form label input::placeholder {
@@ -117,40 +124,4 @@ section main .auth a {
     display: block;
     padding-block: 10px;
     text-align: end;
-}
-
-@media screen and (max-width: 767px) {
-    section {
-        padding: 20px;
-    }
-    section main .auth {
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 767px) and (max-width: 991px) {
-    section {
-        padding: 20px;
-    }
-    section main .auth {
-        width: 40%;
-    }
-}
-
-@media screen and (min-width: 991px) and (max-width: 1023px) {
-    section {
-        padding: 20px;
-    }
-    section main .auth {
-        width: 40%;
-    }
-}
-
-@media screen and (min-width: 1023px) {
-    section {
-        padding: 20px;
-    }
-    section main .auth {
-        width: 30%;
-    }
 }
