--- a/src/auth/SignIn/Signin.css
+++ b/src/auth/SignIn/Signin.css
@@ -4,13 +4,13 @@
     --bgBtn: #141416;
 }
 
-section {
+main {
     padding: 15px 35px;
     min-height: 80vh;
     display: grid;
 }
 
-section main {
+main section {
     width: 100%;
     min-height: 70vh;
     display: flex;
@@ -18,58 +18,48 @@ section main {
     align-items: center;
 }
 
-section main article {
+main section article {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-section main article .auth {
+main section article .auth {
     text-align: center;
     width: 100%;
     max-width: 400px;
 }
 
-section main article .auth form label {
-    background: var(--bgbtn);
-    border-radius: 10px;
-    padding: 15px 10px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    border: 2px solid transparent;
-}
-
-section main article .auth form label span {
+main section article .auth form label span {
     display: flex;
     align-items: center;
 }
 
-section main article .auth form p {
+main section article .auth form p {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 2px;
 }
 
-section main article .auth form p a {
+main section article .auth form p a {
     font-weight: 600;
 }
 
-section main article .auth > span {
+main section article .auth > span {
     color: var(--grayClr);
     text-align: center;
     display: block;
     margin-block: 20px;
 }
 
-section main article .auth-providers {
+main section article .auth-providers {
     display: flex;
     gap: 7px;
 }
 
-section main article .auth-providers button {
+main section article .auth-providers button {
     background: var(--bgbtn);
     border: none;
     width: 50%;
@@ -78,7 +68,7 @@ section main article .auth-providers button {
     cursor: pointer;
 }
 
-section main .auth a {
+main section .auth a {
     text-decoration: none;
     color: black;
     font-size: 15px;
