--- a/src/auth/components/InputPassword/InputPassword.css
+++ b/src/auth/components/InputPassword/InputPassword.css
@@ -21,3 +21,13 @@ label input {
     outline: none;
     background: transparent;
 }
+
+label {
+    background: var(--bgbtn);
+    border-radius: 10px;
+    padding: 15px 10px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border: 2px solid transparent;
+}
