--- a/src/auth/components/Footer/Footer.css
+++ b/src/auth/components/Footer/Footer.css
@@ -6,10 +6,22 @@ footer {
 }
 
 footer p {
-    padding: 0;
+    /* padding: 0; */
+    padding: 0 20px;
 }
 
 footer a {
     text-decoration: none;
     color: var(--grayClr);
+    padding: 0 20px;
 }
+/* 
+@media screen and (max-width: 767px) {
+    footer p {
+        padding: 0;
+    }
+
+    footer a {
+        padding: 0;
+    }
+} */
