--- a/src/auth/components/Sidebar/Sidebar.css
+++ b/src/auth/components/Sidebar/Sidebar.css
@@ -13,6 +13,10 @@ aside {
     align-content: space-between;
 }
 
+aside.active {
+    background-color: black;
+}
+
 aside header > a {
     text-decoration: none;
     display: flex;
@@ -23,6 +27,10 @@ aside header > a {
     font-weight: 600;
     font-size: 1.4rem;
     gap: 5px;
+}
+
+aside header > a.active {
+    color: white;
 }
 
 aside header ul {
@@ -54,7 +62,7 @@ aside header ul li a:hover {
 }
 
 aside header ul li a.active {
-    background-color: black;
+    background-color: #f2f2f2;
     color: white;
 }
 
