--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'PoppinsLight';
+  font-family: "PoppinsLight";
   src: url(../../../assets/font/Poppins-Light.woff);
 }
 
@@ -7,10 +7,11 @@ aside {
   min-height: 100vh;
   width: 100%;
   max-width: 270px;
-  padding: 15px;
-  background: #f9f9f9;
+  padding: 10px;
+  background: #eaeaea;
   display: grid;
   align-content: space-between;
+  transition-duration: 200ms;
 }
 
 aside.active {
@@ -52,9 +53,9 @@ aside header ul li a {
   text-decoration: none;
   padding: 15px;
   border-radius: 15px;
-  color: black;
-  font-family: 'PoppinsLight';
+  font-family: "PoppinsLight";
   gap: 10px;
+  color: black;
 }
 
 aside header ul li a:hover {
@@ -62,8 +63,7 @@ aside header ul li a:hover {
 }
 
 aside header ul li a.active {
-  background-color: #f2f2f2;
-  color: white;
+  background-color: #d5d5d5;
 }
 
 aside footer {
@@ -90,7 +90,7 @@ aside footer ul li a {
   padding: 15px;
   border-radius: 15px;
   color: black;
-  font-family: 'PoppinsLight';
+  font-family: "PoppinsLight";
   gap: 10px;
 }
 
@@ -99,6 +99,5 @@ aside footer ul li a:hover {
 }
 
 aside footer ul li a.active {
-  background-color: black;
-  color: white;
+  background-color: #d5d5d5;
 }
