--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -1,31 +1,36 @@
-article {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
+article.notFound {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
 }
 
-article h1 {
-  font-size: 7rem;
-  margin: 0;
-  font-family: 'PoppinsRegular';
+article .notFoundPage h1 {
+    font-size: 7rem;
+    margin: 0;
+    font-family: "PoppinsRegular";
 }
 
 article p {
-  margin: 0;
+    margin: 0;
 }
 
 article .notFoundPage {
-  text-align: center;
+    text-align: center;
 }
 
-article .notFoundPage button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding-block: 10px;
-  border-radius: 13px;
-  font-size: 15px;
+article .notFoundPage a {
+    text-decoration: none;
+    color: white;
+}
+
+article .notFoundPage a button {
+    padding-block: 10px;
+    border-radius: 13px;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
