--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -3,11 +3,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: black;
+  /* background: #1f1f1f; */
   border-radius: 25px;
   padding: 15px;
-  margin-top: 20px;
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.15);
+  /* box-shadow: 0 0 15px #121212; */
+  box-shadow: 0 0 7px lightgray;
 }
 
 .banner .text {
@@ -34,11 +34,14 @@
 }
 
 .banner h1 {
-  color: white;
   font-size: 2rem;
   margin-top: 0;
 }
 
 .banner p {
+  color: black;
+}
+
+.banner p.dark {
   color: #d4d4d4;
 }
