--- a/src/components/HeaderDashboard/HeaderDashboard.css
+++ b/src/components/HeaderDashboard/HeaderDashboard.css
@@ -3,31 +3,43 @@ header.dashboard-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 7px;
-}
-
-header.dashboard-header.dark {
-  background: #1f1f1f;
+  padding: 4px 5px;
+  border-bottom: 0.5px solid #121212;
 }
 
 header.dashboard-header label {
   display: flex;
   align-items: center;
-  border-radius: 20px;
+  border-radius: 10px;
+  /* height: 55px; */
   margin: 0;
-  padding: 10px;
+  padding: 5px;
   width: 600px;
   border: 1px solid #121212;
 }
 
 header.dashboard-header label.dark {
-  background: #121212;
+  background: #1f1f1f;
 }
 
 header.dashboard-header label input {
   width: 100%;
 }
 
+header.dashboard-header label input.dark {
+  color: white;
+}
+
 header.dashboard-header label input::placeholder {
-  color: #c2c3cb;
+  color: black;
+}
+
+header.dashboard-header.dark label input::placeholder {
+  color: #f5f5f5;
+}
+
+header.dashboard-header .account-details {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
