--- a/src/components/ThemeSwitch/ThemeSwitch.css
+++ b/src/components/ThemeSwitch/ThemeSwitch.css
@@ -1,14 +1,20 @@
-header.dashboard-header button {
-  background: black;
-  width: 55px;
-  aspect-ratio: 1/1;
+header.dashboard-header button.switch {
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  /* aspect-ratio: 1/1; */
   padding: 0;
   margin: 0;
   display: flex;
   align-items: center;
+  border: none;
   justify-content: center;
+  border-radius: 15px;
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid #121212;
 }
 
 header.dashboard-header button.dark {
-  background-color: #121212;
+  background-color: #1f1f1f;
 }
