--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -2,7 +2,6 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   background: #1f1f1f;
   border-radius: 25px;
   padding: 20px;
@@ -10,6 +9,7 @@
 
 .banner .text {
   width: 50%;
+  display: grid;
 }
 
 .banner .buttons {
@@ -18,19 +18,14 @@
 }
 
 .banner .buttons button {
-  width: 200px;
+  width: 180px;
   border: 2px solid white;
-  padding: 15px 10px;
   transition-duration: 100ms;
-  margin: 0;
   background-color: var(--bgBtn);
   color: #f3f5f6;
-  font-size: 18px;
-  border: none;
+  font-size: 15px;
   cursor: pointer;
-  border-radius: 15px;
-  margin-block: 20px;
-  border: 2px solid white;
+  border-radius: 10px;
 }
 
 .banner .buttons button:hover {
