--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,4 +1,20 @@
 .dashboard {
   width: 100%;
+  height: 91vh;
   padding: 10px;
+  display: flex;
+  overflow-y: auto;
+}
+
+.dashboard::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
+}
+
+.dashboard::-webkit-scrollbar-thumb {
+  background: #1f1f1f;
+}
+
+.dashboard .dashboard-main {
+  width: 65%;
 }
