--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -48,10 +48,9 @@
     right: 0;
     top: 50px;
     display: grid;
-    /* gap: 15px; */
     background-color: #f5f5f5;
     border-radius: 10px;
-    padding: 8px;
+    padding: 15px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -70,7 +69,7 @@
 }
 
 .account .headersubmenu a:nth-child(2) {
-    border-bottom: 0.5px solid #e5e7eb;
+    border-bottom: 0.5px solid #9ca3af;
 }
 
 .account .headersubmenu a.dark:nth-child(2) {
@@ -78,7 +77,7 @@
 }
 
 .account .headersubmenu a:nth-child(4) {
-    border-bottom: 0.5px solid #e5e7eb;
+    border-bottom: 0.5px solid #9ca3af;
 }
 
 .account .headersubmenu a.dark:nth-child(4) {
