--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -6,7 +6,7 @@
 aside {
   min-height: 100vh;
   width: 100%;
-  max-width: 270px;
+  max-width: 220px;
   background: #f5f5f5;
   display: grid;
   align-content: space-between;
@@ -130,4 +130,10 @@ aside footer ul li a.dark {
 aside footer ul li a.active {
   background-color: #1f1f1f;
   color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  aside {
+    display: none;
+  }
 }
