--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -14,18 +14,24 @@
 
 .banner .buttons {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
 .banner .buttons button {
-  width: 180px;
-  border: 2px solid white;
-  transition-duration: 100ms;
   background-color: var(--bgBtn);
   color: #f3f5f6;
-  font-size: 15px;
+  padding: 10px 15px;
+  border-radius: 7px;
+  border: none;
+  letter-spacing: 1px;
+  font-weight: 500;
+  font-size: 14px;
   cursor: pointer;
-  border-radius: 10px;
+  background: transparent;
+  border: 2px solid;
+  color: white;
+  transition: 200ms;
 }
 
 .banner .buttons button:hover {
