--- a/src/components/NftList/NftList.css
+++ b/src/components/NftList/NftList.css
@@ -7,6 +7,7 @@ article header {
 article header a {
     text-decoration: none;
     color: unset;
+    font-size: 14px;
 }
 
 .table-wrapper {
@@ -18,12 +19,8 @@ article header a {
     height: 8px;
 }
 
-.table-wrapper::-webkit-scrollbar-track {
-    background: #1f1f1f;
-}
-
 .table-wrapper::-webkit-scrollbar-thumb {
-    background: #444;
+    background: #1f1f1f;
     border-radius: 4px;
 }
 
@@ -54,7 +51,6 @@ article.dark .custom-table th {
     background-color: #1f1f1f;
     color: #f5f5f5;
     font-weight: 600;
-    transition: 200ms;
 }
 
 article .custom-table th {
