feat: remove unused image, refactor Account component, and enhance styles for Dashboard and NftCards components; add BestSellers component

--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -1,10 +1,10 @@
 .account {
     position: relative;
+    z-index: 10;
 }
 
 .account button.account {
     height: 40px;
-    /* color: #f1f1f1; */
     font-size: 15px;
     cursor: pointer;
     border: none;
