--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "PoppinsLight";
+  font-family: 'PoppinsLight';
   src: url(../../../assets/font/Poppins-Light.woff);
 }
 
@@ -52,7 +52,7 @@ aside header ul li a {
   text-decoration: none;
   padding: 10px;
   border-radius: 10px;
-  font-family: "PoppinsLight";
+  font-family: 'PoppinsLight';
   gap: 10px;
   color: black;
   transition: all 100ms ease;
@@ -109,7 +109,7 @@ aside footer ul li a {
   padding: 10px;
   border-radius: 10px;
   color: #111111;
-  font-family: "PoppinsLight";
+  font-family: 'PoppinsLight';
   gap: 10px;
   transition: all 150ms ease;
 }
