feat: loader added

--- a/client/src/components/NftCards/NftCards.css
+++ b/client/src/components/NftCards/NftCards.css
@@ -75,3 +75,9 @@ article.cards .cards .card_text button {
     background: transparent;
     color: #141416;
 } */
+
+@media screen and (max-width: 991px) {
+  .cardContainer {
+    flex-wrap: wrap;
+  }
+}
