--- a/client/src/pages/Dashboard/Dashboard.css
+++ b/client/src/pages/Dashboard/Dashboard.css
@@ -33,5 +33,20 @@
     width: 100%;
   }
 
-  
+  .dashboard .usersList {
+    display: flex;
+    width: 100%;
+    align-items: baseline;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .dashboard .usersList {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 10px;
+  }
 }
