--- a/client/src/components/BestSellers/BestSellers.css
+++ b/client/src/components/BestSellers/BestSellers.css
@@ -1,7 +1,7 @@
 .bestSellersList {
     width: 100%;
     border-radius: 25px;
-    padding: 10px;
+    padding: 20px;
     background: white;
     border: 1px solid #edf2f7;
 }
@@ -21,6 +21,10 @@
     border: 1px solid transparent;
 }
 
+.bestSellersList header h3 {
+    margin: 0;
+}
+
 .users_content .user_id {
     display: flex;
     justify-content: space-between;
@@ -33,7 +37,6 @@
     display: flex;
     align-items: center;
     gap: 15px;
-    position: relative;
 }
 
 .users_content .user_id .user_text img {
