--- a/client/src/components/Notification/Notification.css
+++ b/client/src/components/Notification/Notification.css
@@ -3,13 +3,14 @@
 }
 
 .notificationItems {
-    width: 280px;
+    min-width: 250px;
     position: absolute;
     top: 50px;
     right: 0;
     background: #f5f5f5;
     border-radius: 10px;
     padding: 15px;
+    z-index: 11;
 }
 
 .notificationItems.dark {
