--- a/client/src/components/RecentViewers/RecentViewers.css
+++ b/client/src/components/RecentViewers/RecentViewers.css
@@ -1,7 +1,7 @@
 .recents {
     width: 100%;
     border-radius: 25px;
-    padding: 10px;
+    padding: 20px;
     background: white;
     margin-top: 20px;
 }
@@ -25,6 +25,7 @@
 
 .recents header h3 {
     font-weight: 600;
+    margin: 0;
 }
 
 .recents .users_content .viewers_list .view_list {
