--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,7 @@ body {
 * {
   box-sizing: border-box;
   font-family: "PoppinsRegular";
+  -webkit-tap-highlight-color: transparent;
 }
 
 body.light {
