--- a/client/src/components/NftCards/NftCards.css
+++ b/client/src/components/NftCards/NftCards.css
@@ -73,6 +73,18 @@ article.cards .cards .card_text button {
 
 @media screen and (max-width: 991px) {
   .cardContainer {
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cardContainer {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .cardContainer {
+    grid-template-columns: 1fr;
   }
 }
