--- a/client/src/components/Account/Account.css
+++ b/client/src/components/Account/Account.css
@@ -25,9 +25,9 @@
   width: 30px;
   aspect-ratio: 1/1;
   display: block;
-  background: #1f1f1f;
+  /* background: #1f1f1f; */
   display: grid;
-  color: #f1f1f1;
+  /* color: #f1f1f1; */
   font-size: 18px;
   place-items: center;
   border-radius: 50px;
@@ -110,5 +110,9 @@
 @media screen and (max-width: 991px) {
   .account button.account p {
     display: none;
+  }
+
+  .account button.account {
+    width: 40px;
   }
 }
