--- a/client/src/components/Notification/Notification.css
+++ b/client/src/components/Notification/Notification.css
@@ -11,6 +11,7 @@
     border-radius: 10px;
     padding: 15px;
     z-index: 11;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .notificationItems.dark {
