refactor: edited folder names

--- a/client/src/components/RecentViewers/RecentViewers.css
+++ b/client/src/components/RecentViewers/RecentViewers.css
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 0;
+    /* margin: 20px 0; */
 }
 
 .recents .users_content .viewers_list .view_list .view_img {
