--- a/client/src/components/HeaderDashboard/HeaderDashboard.css
+++ b/client/src/components/HeaderDashboard/HeaderDashboard.css
@@ -8,7 +8,7 @@ header.dashboard-header {
   gap: 10px;
 }
 
-header.dashboard-header label {
+header.dashboard-header label.headerSaerch {
   display: flex;
   align-items: center;
   border-radius: 10px;
@@ -19,23 +19,26 @@ header.dashboard-header label {
   border: 1px solid #121212;
 }
 
-header.dashboard-header label.dark {
+header.dashboard-header label.headerSaerch.dark {
   background: #1f1f1f;
 }
 
-header.dashboard-header label input {
+header.dashboard-header label.headerSaerch input {
+  outline: none;
   width: 100%;
+  background: none;
+  border: none;
 }
 
-header.dashboard-header label input.dark {
+header.dashboard-header label.headerSaerch input.dark {
   color: white;
 }
 
-header.dashboard-header label input::placeholder {
+header.dashboard-header label.headerSaerch input::placeholder {
   color: black;
 }
 
-header.dashboard-header.dark label input::placeholder {
+header.dashboard-header.dark label.headerSaerch input::placeholder {
   color: #f5f5f5;
 }
 
@@ -44,4 +47,3 @@ header.dashboard-header .account-details {
   align-items: center;
   gap: 10px;
 }
-
