--- a/client/src/components/NftList/NftList.css
+++ b/client/src/components/NftList/NftList.css
@@ -34,11 +34,17 @@ article header a {
   min-width: 800px;
 }
 
-article .custom-table th,
 article .custom-table td {
   text-align: left;
   padding: 12px 16px;
   border-bottom: 1px solid #e5e7eb;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+article .custom-table th {
+  text-align: left;
+  padding: 12px 16px;
   font-size: 14px;
   white-space: nowrap;
 }
