--- a/client/src/pages/Market/Market.css
+++ b/client/src/pages/Market/Market.css
@@ -2,9 +2,71 @@ article.market {
     width: 100%;
     padding: 10px;
     height: 91.7vh;
-    padding: 10px;
     overflow-y: auto;
     gap: 20px;
+}
+
+article.market .searchCards {
+    display: flex;
+    justify-content: space-between;
+}
+
+article.market .searchCards .buttons {
+    display: flex;
+    gap: 10px;
+}
+
+article.market label.searchNftcards {
+    width: 250px;
+    background-color: none;
+    display: flex;
+    align-items: center;
+    background: #f5f5f5;
+    border-radius: 10px;
+    padding: 5px;
+    border: 2px solid #1f1f1f;
+}
+
+article.market label.searchNftcards.dark {
+    background: #1f1f1f;
+}
+
+article.market label.dark input.searchNftInput {
+    outline: none;
+    border: none;
+    color: white;
+    background: none;
+}
+
+article.market label input.searchNftInput {
+    outline: none;
+    border: none;
+    color: black;
+    background: none;
+}
+
+article.market .searchCards label .searchNftInput::placeholder {
+    color: black;
+}
+
+article.market .searchCards label.dark .searchNftInput::placeholder {
+    color: white;
+}
+
+article.market .buttons button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 6px 10px;
+    background: none;
+    color: black;
+    border: 2px solid;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+article.market .buttons button.active {
+    color: white;
 }
 
 article.market::-webkit-scrollbar {
@@ -21,6 +83,7 @@ article.market::-webkit-scrollbar-thumb {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 20px;
+    margin-top: 20px;
 }
 
 article.market .marketcollection .cards {
@@ -39,7 +102,7 @@ article.market .marketcollection .cards.dark {
 article.market .img {
     position: relative;
     width: 100%;
-    height: 150px;
+    height: 140px;
     border-radius: 15px;
     overflow: hidden;
 }
@@ -89,23 +152,32 @@ article.market .card_text button {
     align-items: center;
 }
 
+@media screen and (min-width: 991px) and (max-width: 1535px) {
+    .marketcollection {
+        grid-template-columns: repeat(6, 1fr);
+    }
+}
+
 @media screen and (max-width: 991px) {
     .marketcollection {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-    article.market .img {
-        height: 200px;
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
 @media screen and (max-width: 767px) {
     .marketcollection {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 500px) {
     .marketcollection {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .marketcollection {
+        grid-template-columns: 1fr;
     }
 }
