--- a/client/src/components/InputPassword/InputPassword.css
+++ b/client/src/components/InputPassword/InputPassword.css
@@ -3,6 +3,10 @@ input {
   width: 100%;
 }
 
+label.inputpassword.active {
+  background: #1f1f1f;
+}
+
 label.inputpassword:last-of-type {
   margin-top: 15px;
 }
@@ -20,6 +24,10 @@ label.inputpassword input {
   border: none;
   outline: none;
   background: transparent;
+}
+
+label.inputpassword.active input {
+  color: white;
 }
 
 label.inputpassword {
