--- a/client/src/components/BottomNavbar/BottomNavbar.css
+++ b/client/src/components/BottomNavbar/BottomNavbar.css
@@ -5,6 +5,11 @@ nav.bottomNav {
     bottom: 0;
 }
 
+nav.bottomNav ul {
+    list-style: none;
+    display: flex;
+}
+
 @media screen and (max-width: 991px) {
     nav.bottomNav {
         display: block;
