--- a/client/src/components/BottomNavbar/BottomNavbar.css
+++ b/client/src/components/BottomNavbar/BottomNavbar.css
@@ -2,12 +2,38 @@ nav.bottomNav {
     width: 100%;
     display: none;
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
 }
 
 nav.bottomNav ul {
+    width: 95%;
     list-style: none;
     display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 0;
+    margin: auto;
+    border-radius: 50px;
+    padding: 0;
+    padding: 3px;
+    background: white;
+}
+
+nav.bottomNav ul.active {
+    background: #1f1f1f;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+nav.bottomNav ul li a {
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+nav.bottomNav ul li a.active {
+    background-color: black;
 }
 
 @media screen and (max-width: 991px) {
