--- a/client/src/pages/Market/Market.css
+++ b/client/src/pages/Market/Market.css
@@ -150,6 +150,7 @@ article.market .card_text button {
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 2px solid white;
 }
 
 @media screen and (min-width: 991px) and (max-width: 1535px) {
