--- a/client/src/components/BottomNavbar/BottomNavbar.css
+++ b/client/src/components/BottomNavbar/BottomNavbar.css
@@ -10,18 +10,19 @@ nav.bottomNav ul {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    gap: 20px;
     margin: 0;
     margin: auto;
     border-radius: 50px;
     padding: 0;
-    padding: 3px;
+    padding: 5px;
     background: white;
+    border: 0.5px solid #555;
 }
 
 nav.bottomNav ul.active {
     background: #1f1f1f;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    border: 0.5px solid #515151;
 }
 
 nav.bottomNav ul li a {
