--- a/client/src/pages/Market/Market.css
+++ b/client/src/pages/Market/Market.css
@@ -86,6 +86,11 @@ article.market::-webkit-scrollbar-thumb {
     margin-top: 20px;
 }
 
+.marketcollection a {
+    color: inherit;
+    text-decoration: none;
+}
+
 article.market .marketcollection .cards {
     padding: 10px;
     border-radius: 15px;
