--- a/client/src/components/ChatUser/ChatUser.css
+++ b/client/src/components/ChatUser/ChatUser.css
@@ -1,17 +1,28 @@
 article.chat {
     width: 100%;
+    background: #f5f5f5;
+}
+
+body.dark article.chat {
+    width: 100%;
+    background: #121212;
 }
 
 article.chat header {
     width: 100%;
-    padding: 15px;
+    padding: 5px;
     display: flex;
     justify-content: space-between;
+    background: transparent;
+}
+
+body.dark article.chat header {
+    background: #5555;
 }
 
 article.chat header .icons {
     display: flex;
-    gap: 15px;
+    gap: 10px;
 }
 
 article.chat header .icons button {
@@ -21,7 +32,7 @@ article.chat header .icons button {
     border-radius: 50%;
     background: none;
     border: none;
-    border: 1px solid black;
+    border: 1px solid #1f1f1f;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,7 +54,17 @@ body.dark article.chat header span {
 
 article.chat header .user {
     display: flex;
-    gap: 20px;
+    align-items: center;
+    gap: 10px;
+}
+
+article.chat header .user > button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 article.chat header h4,
@@ -54,4 +75,85 @@ p {
 article.chat header p {
     color: #22c55e;
     font-size: 13px;
+}
+
+article.chat .messages {
+    height: 75vh;
+    overflow-y: auto;
+}
+
+article.chat .messages div {
+    padding-inline: 4px;
+    margin-block: 10px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+article.chat .messages div p {
+    background: #5555;
+    display: inline;
+    border-radius: 3px;
+    padding: 4px;
+}
+
+article.chat .messages::-webkit-scrollbar {
+    width: 3px;
+}
+
+article.chat .messages::-webkit-scrollbar-thumb {
+    width: 3px;
+    background: #f1f1f1;
+}
+
+article.chat footer {
+    width: 100%;
+    padding: 5px;
+    display: flex;
+    gap: 5px;
+}
+
+article.chat footer > button {
+    border: none;
+    background: #1f1f1f;
+    min-width: 45px;
+    height: 45px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+article.chat footer label {
+    width: 100%;
+    display: flex;
+    background: white;
+    border-radius: 10px;
+    padding: 10px 5px;
+    display: flex;
+    align-items: center;
+}
+
+article.chat footer label input {
+    outline: none;
+    border: none;
+}
+
+article.chat footer label button {
+    background: transparent;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 991px) {
+    article.chat {
+        position: absolute;
+        z-index: 10;
+    }
+    article.chat .messages {
+        height: 65vh;
+    }
 }
