--- a/client/src/layout/Chats/ChatLayout.css
+++ b/client/src/layout/Chats/ChatLayout.css
@@ -2,15 +2,17 @@ article.chats {
     width: 100%;
     display: flex;
     height: 91.7vh;
-    /* padding: 10px; */
     overflow-y: auto;
 }
 
 article.chats .users {
-    width: 30%;
+    width: 400px;
     overflow-y: auto;
-    /* padding: 15px 20px; */
     border-right: 0.5px solid #121212;
+}
+
+body.dark article.chats .users {
+    border-right: 0.5px solid #1f1f1f;
 }
 
 article.chats .users label {
@@ -94,6 +96,10 @@ article.chats .users .userlist a:hover {
     background: #f5f5f5;
 }
 
+body.dark article.chats .users .userlist a:hover {
+    background: #1f1f1f;
+}
+
 body.dark article.chats .users .userlist a {
     color: white;
 }
@@ -102,4 +108,11 @@ article.chats .users .userlist a .userdetails {
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+@media screen and (max-width: 991px) {
+    .users {
+        width: 100% !important;
+        border: none !important;
+    }
 }
